<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreferenzeActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/headerGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <TextView
        android:id="@+id/idTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_bottom_header"
        android:gravity="center_vertical|start"
        android:paddingStart="130dp"
        android:text="@string/preferenze"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/headerGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnIndietro"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/settings_button_background"
        android:contentDescription="@string/torna_indietro"
        android:elevation="4dp"
        android:padding="8dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_goback"
        app:tint="#000000"

        app:layout_constraintTop_toTopOf="@id/idTitle"
        app:layout_constraintBottom_toBottomOf="@id/idTitle"

        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/lblPosizione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/scegli_la_zona_di_interesse"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerGuideline"/>

    <RadioGroup
        android:id="@+id/rgPosizione"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblPosizione">

        <RadioButton
            android:id="@+id/rbGps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usa_gps" />

        <RadioButton
            android:id="@+id/rbManuale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usa_manuale" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinnerZona"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/rgPosizione"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>